2014-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/ntp.c (ntp_recv_file): Log error with log_write().

2014-10-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c (ntp_long_attack): Use prefs_set() instead of arglist
	handling.

2014-10-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/utils.c (get_max_hosts_number, get_max_checks_number): Use
	prefs_get() instead of arglist. Also drop parameter as it is not
	needed anymore.

	* src/utils.h: Adjust protos accordingly.

	* src/attack.c (attack_network): Adjust calls to above API change.

	* src/pluginlaunch.c (pluginlaunch_init): Adjust calls to above API
	change.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c (ntp_read_prefs): Increase size of buffer for
	preferences to allow for upto 69K NVTs.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c (prefs_set): Change behaviour to always take care
	for memory allocation for both, key and value.

	* src/ntp.c (ntp_long_attack): Free the target after prefs_set.
	(ntp_read_prefs): Use prefs_set() instead of doing it on arglist level.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c (ntp_long_attack): Use prefs_set instead of doing it on
	arglist level.

	* src/preferences.c (prefs_set): New.

	* src/preferences.h: Add proto accordingly.

	* src/attack.c (attack_network): Use prefs_get() instead of arglist.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	First step of using preferences via API instead of via arglists.

	* src/preferences.c (prefs_get): New. Get a preference value via a key.
	(preferences_kb_location): Removed. This should be used via prefs_get
	now.

	* src/preferences.h: Adjust protos accordingly.

	* src/openvassd.c (flush_all_kbs): Use prefs_get() to directly get
	a preference. This allows to drop the function parameter as well.
	(main): Use prefs_get() to directly get a prefernce.
