@@ -40,7 +40,6 @@ void comm_send_preferences (struct arglist *);
 void comm_send_rules (struct arglist *);
 void comm_wait_order (struct arglist *);
 void comm_setup_plugins (struct arglist *, char *);
-void client_handler ();
 void comm_send_nvt_info (struct arglist *);
 void plugin_send_infos (struct arglist *, char *);
 
