@@ -35,7 +35,7 @@ int hosts_init (int, int);
 int hosts_new (struct arglist *, char *, int);
 int hosts_set_pid (char *, pid_t);
 int hosts_read (struct arglist *);
-void hosts_stop_all ();
+void hosts_stop_all (void);
 int hosts_stop_host (char *);
 
 #endif
