@@ -52,7 +52,7 @@ int process_alive (pid_t);
 int is_client_present (int);
 int data_left (int);
 
-void wait_for_children1 ();
+void wait_for_children1 (void);
 
 int
 is_scanner_only_pref (const char *);
